# focusedme

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE-0.1.79.md  RELEASE-0.1.83.md  __main__.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-windows.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  windows_install.bat
.github/: ISSUE_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  docs.yml  python-publish.yml  release.yml
config/: __init__.py  fm.init
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst  windows_install.md  windows_install.rst
focusedme/: __init__.py  __main__.py  focusedme.py  requirements.txt  util.py
tests/: __init__.py  test_audio.py  test_focusedme.py
