[tool.poetry]
name = "focusedme"
version = "0.1.33"
description = "A minimalist Pomodoro timer that runs in your terminal"
authors = ["Fabio Scopeta <scopeta@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/scopeta/focusedme"
repository = "https://github.com/scopeta/focusedme"
documentation = "https://focusedme.readthedocs.io"
keywords = ["pomodoro", "timer", "productivity", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
packages = [
    { include = "focusedme" }
]
include = [
    "README.rst",
    "HISTORY.rst",
    "LICENSE",
    "focusedme/**/*.wav",
    "config/**",
]

[tool.poetry.dependencies]
python = "^3.9"
simpleaudio = "^1.0.4"
typer = "^0.9.0"
rich = "^13.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
tox = "^4.8.0"
mkdocs-material = "^9.2.0"
mkdocstrings = { extras = ["python"], version = "^0.22.0" }
hypothesis = "^6.82.6"
types-setuptools = "^80.3.0.20250505"
mkdocs-autorefs = "^1.4.1"
poetry-dynamic-versioning = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
focusedme = "focusedme.__main__:main"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=focusedme --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.dynamic-versioning]
# enable version injection at build time from Git tags
enable = true
inject = ["focusedme/__init__.py"]
search = "\\d+\\.\\d+\\.\\d+"
